--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
 <header class="header">
-    <img src="./images/header-logo.svg" class="header__logo" alt="header logo pioneer">
     <div class="header__connect">
-        <div class="header__content-mail">
-            <p class="header__text"> По вопросам и предложениям</p>
-            <a href="mailto:pionerrr@sila.ru" class="header__contact">pionerrr@sila.ru</a>
-        </div>
-        <div class="header__content-tel">
-            <p class="header__text"> Для консультаций</p>
-            <a href="tel:+74954562421" class="header__contact">+7 (495) 456-24-21</a>
+        <img src="./images/header-logo.svg" class="header__logo" alt="header logo pioneer">
+        <div class="header__container">
+            <div class="header__content-mail">
+                <p class="header__text"> По вопросам и предложениям</p>
+                <a href="mailto:pionerrr@sila.ru" class="header__contact">pionerrr@sila.ru</a>
+            </div>
+            <div class="header__content-tel">
+                <p class="header__text"> Для консультаций</p>
+                <a href="tel:+74954562421" class="header__contact">+7 (495) 456-24-21</a>
+            </div>
         </div>
     </div>
     <ul class="header__menu-list">
@@ -31,8 +33,16 @@
         <li class="header__menu-link">Контакты</li>
         <li>
             <img src="./images/img-tel-header.svg" class="header__img" alt="header logo telephone">
-            <a href="tel:+74954562421" class="header__contact">Перезвони мне</a>
+            <a href="tel:+74954562421" class="header__contact">Перезвоните мне</a>
         </li>
     </ul>
 </header>
+<section class="main">
+    <div class="main__content">
+        <h1 class="main__title">Российский завод силовых машин</h1>
+        <p class="main__text">научно-производственное предприятие,
+            занимающееся разработкой и производством силовых машин.</p>
+    </div>
+        <img src="./images/main-background.png" class="main__img" alt=" images factory">
+</section>
 </body>
