add section info company

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
             </div>
         </div>
     </div>
-    <ul class="header__menu-list">
-        <li class="header__menu-link">Главная</li>
-        <li class="header__menu-link">О предприятии</li>
-        <li class="header__menu-link">Новости</li>
-        <li class="header__menu-link">Продукция</li>
-        <li class="header__menu-link">Услуги</li>
-        <li class="header__menu-link">Поддержка</li>
-        <li class="header__menu-link">География поставок</li>
-        <li class="header__menu-link">Контакты</li>
-        <li>
-            <img src="./images/img-tel-header.svg" class="header__img" alt="header logo telephone">
-            <a href="tel:+74954562421" class="header__contact">Перезвоните мне</a>
-        </li>
-    </ul>
+    <nav class="header__navigation">
+        <ul class="header__menu-list">
+        <li><a href="#" class="header__menu-link">Главная</a></li>
+        <li><a href="#" class="header__menu-link">О предприятии</a></li>
+        <li><a href="#" class="header__menu-link">Новости</a></li>
+        <li> <a href="#" class="header__menu-link">Продукция</a></li>
+        <li><a href="#" class="header__menu-link">Услуги</a></li>
+        <li><a href="#" class="header__menu-link">Поддержка</a></li>
+        <li><a href="#" class="header__menu-link">География поставок</a></li>
+        <li><a href="#" class="header__menu-link">Контакты</a></li>
+        </ul>
+        <img src="./images/img-tel-header.svg" class="header__img" alt="header logo telephone">
+        <a href="tel:+74954562421" class="header__nav-contact">Перезвоните мне</a>
+    </nav>
 </header>
 <section class="main">
     <div class="main__content">
@@ -44,5 +44,17 @@
             занимающееся разработкой и производством силовых машин.</p>
     </div>
         <img src="./images/main-background.png" class="main__img" alt=" images factory">
+</section>
+<section class="info__company">
+    <h2 class="info__title">О предприятии</h2>
+    <div class="info__content">
+        <p class="info__text">За 20 лет развития в структуре завода сформирован мощный производственный потенциал, научно-технический центр, испытательная лаборатория, современная база, учебный центр и широкая сеть региональных и международных представительств в Российской Федерации, Республике Беларусь, Узбекистане и Казахстане.</p>
+        <p class="info__text">В номенклатуре выпускаемой НПП «ПИОНЕР» продукции найдется все, что необходимо для успешного решения задачи автоматизации технологических процессов на любом предприятии. Все средства измерения производства «ПИОНЕР» внесены в Государственный реестр СИ и имеют необходимые разрешительные документы.</p>
+    </div>
+    <p class="info__text">Ежегодно НПП «ПИОНЕР» реализует несколько проектов по модернизации <br> серийных и разработке новых приборов, призванные в наибольшей степени <br> удовлетворять возрастающие требования наших заказчиков.</p>
+    <div class="info__images">
+        <img src="./images/info-image.png" class="info__img" alt="image production">
+        <img src="./images/info-image-two.png" class="info__img" alt="image production">
+    </div>
 </section>
 </body>
