add section products, added adaptive version for section

--- a/index.html
+++ b/index.html
@@ -12,30 +12,34 @@
     <div class="header__connect">
         <img src="./images/header-logo.svg" class="header__logo" alt="header logo pioneer">
         <div class="header__container">
-            <div class="header__content-mail">
+            <div class="header__mail">
                 <p class="header__text"> По вопросам и предложениям</p>
                 <a href="mailto:pionerrr@sila.ru" class="header__contact">pionerrr@sila.ru</a>
             </div>
-            <div class="header__content-tel">
+            <div class="header__tel">
                 <p class="header__text"> Для консультаций</p>
                 <a href="tel:+74954562421" class="header__contact">+7 (495) 456-24-21</a>
             </div>
         </div>
     </div>
-    <nav class="header__navigation">
-        <ul class="header__menu-list">
-        <li><a href="#" class="header__menu-link">Главная</a></li>
-        <li><a href="#" class="header__menu-link">О предприятии</a></li>
-        <li><a href="#" class="header__menu-link">Новости</a></li>
-        <li> <a href="#" class="header__menu-link">Продукция</a></li>
-        <li><a href="#" class="header__menu-link">Услуги</a></li>
-        <li><a href="#" class="header__menu-link">Поддержка</a></li>
-        <li><a href="#" class="header__menu-link">География поставок</a></li>
-        <li><a href="#" class="header__menu-link">Контакты</a></li>
-        </ul>
-        <img src="./images/img-tel-header.svg" class="header__img" alt="header logo telephone">
-        <a href="tel:+74954562421" class="header__nav-contact">Перезвоните мне</a>
-    </nav>
+    <div class="header__add-content">
+        <nav class="header__navigation">
+            <ul class="header__menu-list">
+            <li><a href="#" class="header__menu-link">Главная</a></li>
+            <li><a href="#" class="header__menu-link">О предприятии</a></li>
+            <li><a href="#" class="header__menu-link">Новости</a></li>
+            <li> <a href="#" class="header__menu-link">Продукция</a></li>
+            <li><a href="#" class="header__menu-link">Услуги</a></li>
+            <li><a href="#" class="header__menu-link">Поддержка</a></li>
+            <li><a href="#" class="header__menu-link">География поставок</a></li>
+            <li><a href="#" class="header__menu-link">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="header__telephone">
+            <a href="tel:+74954562421"> <img src="./images/img-tel-header.svg" class="header__img" alt="logo telephone"></a>
+            <a href="tel:+74954562421" class="header__nav-contact">Перезвоните мне</a>
+        </div>
+    </div>
 </header>
 <section class="main">
     <div class="main__content">
@@ -45,16 +49,71 @@
     </div>
         <img src="./images/main-background.png" class="main__img" alt=" images factory">
 </section>
-<section class="info__company">
+<main class="info">
     <h2 class="info__title">О предприятии</h2>
-    <div class="info__content">
-        <p class="info__text">За 20 лет развития в структуре завода сформирован мощный производственный потенциал, научно-технический центр, испытательная лаборатория, современная база, учебный центр и широкая сеть региональных и международных представительств в Российской Федерации, Республике Беларусь, Узбекистане и Казахстане.</p>
-        <p class="info__text">В номенклатуре выпускаемой НПП «ПИОНЕР» продукции найдется все, что необходимо для успешного решения задачи автоматизации технологических процессов на любом предприятии. Все средства измерения производства «ПИОНЕР» внесены в Государственный реестр СИ и имеют необходимые разрешительные документы.</p>
+    <div class="info__company">
+        <div class="info__content">
+            <p class="info__text">За 20 лет развития в структуре завода сформирован мощный производственный потенциал, научно-технический центр, испытательная лаборатория, современная база, учебный центр и широкая сеть региональных и международных представительств в Российской Федерации, Республике Беларусь, Узбекистане и Казахстане.</p>
+            <p class="info__text">В номенклатуре выпускаемой НПП «ПИОНЕР» продукции найдется все, что необходимо для успешного решения задачи автоматизации технологических процессов на любом предприятии. Все средства измерения производства «ПИОНЕР» внесены в Государственный реестр СИ и имеют необходимые разрешительные документы.</p>
+            <img src="./images/info-image.png" class="info__img" alt="image production">
+        </div>
+        <div class="info__add-content">
+            <p class="info__text">Ежегодно НПП «ПИОНЕР» реализует несколько проектов по модернизации <br> серийных и разработке новых приборов, призванные в наибольшей степени <br> удовлетворять возрастающие требования наших заказчиков.</p>
+            <img src="./images/info-image-two.png" class="info__img" alt="production">
+        </div>
     </div>
-    <p class="info__text">Ежегодно НПП «ПИОНЕР» реализует несколько проектов по модернизации <br> серийных и разработке новых приборов, призванные в наибольшей степени <br> удовлетворять возрастающие требования наших заказчиков.</p>
-    <div class="info__images">
-        <img src="./images/info-image.png" class="info__img" alt="image production">
-        <img src="./images/info-image-two.png" class="info__img" alt="image production">
+</main>
+<section class="products">
+    <h2 class="products__title">Продукция</h2>
+    <div class="products__all">
+        <div class="products__content">
+            <img src="./images/product1.png" class="product__device" alt="product signaling device">
+            <p class="products__name">Сигнализатор уровня</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"></a>
+            </div>
+        </div>
+        <div class="products__content">
+            <img src="./images/product2.png" class="product__device" alt="product signaling device">
+            <p class="products__name">Датчики давления</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"></a>
+            </div>
+        </div>
+        <div class="products__content">
+            <img src="./images/product3.png" class="product__device" alt="product signaling device">
+            <p class="products__name">ПИД-регуляторы</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"> </a>
+            </div>
+        </div>
+        <div class="products__content">
+            <img src="./images/product4.png" class="product__device" alt="product signaling device">
+            <p class="products__name">Калибратор давления</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"> </a>
+            </div>
+        </div>
+        <div class="products__content">
+            <img src="./images/product5.png" class="product__device" alt="product signaling device">
+            <p class="products__name">Корректор расхода газа</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"> </a>
+            </div>
+        </div>
+        <div class="products__content">
+            <img src="./images/product6.png" class="product__device" alt="product signaling device">
+            <p class="products__name">Манометры</p>
+            <div class="products__reference">
+                <a href="#" class="products__link">Подробнее</a>
+                <a href="#"> <img src="images/Vector.svg" alt="arrow"> </a>
+            </div>
+        </div>
     </div>
 </section>
 </body>
